--- a/client/src/Components/material.css
+++ b/client/src/Components/material.css
@@ -1,16 +1,16 @@
 .active > div{
-    background-color: #3f51b5;
+    background-color: #009688;
     color: white;
 }
 .active > div > * > *{
     color: white;
 }
 .active :hover{
-    background-color: #3f51b5 !important;
+    background-color: #009688 !important;
     color: white;
 }
 .active > * > *:hover{
-    background-color: #3f51b5 !important;
+    background-color: #009688 !important;
     color: white;
 }
 
